--- a/res/layout/restrictionentry.xml
+++ b/res/layout/restrictionentry.xml
@@ -13,6 +13,7 @@
         android:src="@android:drawable/arrow_down_float" />
 
     <LinearLayout
+        android:id="@+id/llInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
@@ -49,7 +50,6 @@
         android:checkMark="?android:attr/listChoiceIndicatorMultiple"
         android:gravity="center_vertical"
         android:paddingLeft="6dip"
-        android:paddingRight="6dip"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </LinearLayout>
