--- a/res/layout/restrictionlist.xml
+++ b/res/layout/restrictionlist.xml
@@ -8,16 +8,39 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <TextView
-        android:id="@+id/tvApp"
-        style="?android:attr/listSeparatorTextViewStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableRight="?attr/icon_help"
-        android:textIsSelectable="false" />
+    <!-- Title & help -->
 
     <LinearLayout
-        android:id="@+id/llInfo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/tvApp"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textIsSelectable="false" />
+
+        <ImageView
+            android:id="@+id/ivHelp"
+            android:layout_width="32dip"
+            android:layout_height="32dip"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/help_application"
+            android:src="?attr/icon_help" />
+    </LinearLayout>
+
+    <!-- Thick divider -->
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:background="@android:color/darker_gray" />
+
+    <!-- Icon -->
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dip"
@@ -41,6 +64,8 @@
                 android:contentDescription="@string/help_internet"
                 android:src="?attr/icon_internet" />
         </LinearLayout>
+
+        <!-- Version / package name -->
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -66,6 +91,8 @@
         </LinearLayout>
     </LinearLayout>
 
+    <!-- Title -->
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -74,10 +101,14 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textIsSelectable="false" />
 
+    <!-- Thin divider -->
+
     <View
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray" />
+
+    <!-- What it is all about -->
 
     <ExpandableListView
         android:id="@+id/elvRestriction"
