--- a/res/layout/restrictionlist.xml
+++ b/res/layout/restrictionlist.xml
@@ -19,6 +19,7 @@
             android:id="@+id/tvApp"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:textIsSelectable="false" />
 
