--- a/res/layout/restrictionlist.xml
+++ b/res/layout/restrictionlist.xml
@@ -42,6 +42,7 @@
     <!-- Icon -->
 
     <LinearLayout
+        android:id="@+id/llInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dip"
@@ -116,6 +117,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dip"
-        android:choiceMode="multipleChoice" />
+        android:choiceMode="multipleChoice"
+        android:paddingRight="6dip"
+        android:scrollbarStyle="insideInset" />
 
 </LinearLayout>
