--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -21,7 +21,8 @@
         <item name="icon_expander_minimized">@drawable/expander_ic_minimized_holo_dark</item>
         <item name="icon_expander_maximized">@drawable/expander_ic_maximized_holo_dark</item>
         <item name="icon_launcher">@drawable/ic_launcher_holo_dark</item>
-        <item name="icon_magnifier">@drawable/mag_glass_holo_dark</item>
+        <item name="icon_clear">@drawable/mag_glass_holo_dark</item>
+        <item name="icon_clear_grayed">@drawable/mag_glass_grayed_holo_dark</item>
         <item name="color_system">@color/color_system_dark</item>
     </style>
 
@@ -36,7 +37,8 @@
         <item name="icon_expander_minimized">@drawable/expander_ic_minimized_holo_light</item>
         <item name="icon_expander_maximized">@drawable/expander_ic_maximized_holo_light</item>
         <item name="icon_launcher">@drawable/ic_launcher_holo_light</item>
-        <item name="icon_magnifier">@drawable/mag_glass_holo_light</item>
+        <item name="icon_clear">@drawable/mag_glass_holo_light</item>
+        <item name="icon_clear_grayed">@drawable/mag_glass_grayed_holo_light</item>
         <item name="color_system">@color/color_system_light</item>
     </style>
 
