--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -10,7 +10,8 @@
     <attr name="icon_expander_minimized" format="reference" />
     <attr name="icon_expander_maximized" format="reference" />
     <attr name="icon_launcher" format="reference" />
-    <attr name="icon_magnifier" format="reference" />
+    <attr name="icon_clear" format="reference" />
+    <attr name="icon_clear_grayed" format="reference" />
     <attr name="color_system" format="reference" />
 
 </resources>
