--- a/res/menu/app.xml
+++ b/res/menu/app.xml
@@ -4,11 +4,17 @@
     <item
         android:id="@+id/menu_all"
         android:title="@string/menu_all"/>
-    <item android:id="@+id/menu_app_launch"
-        android:title="@string/menu_app_launch" />
-    <item android:id="@+id/menu_app_settings"
-        android:title="@string/menu_app_settings" />
-    <item android:id="@+id/menu_app_store"
-        android:title="@string/menu_app_store" />
+    <item
+        android:id="@+id/menu_app_launch"
+        android:title="@string/menu_app_launch"/>
+    <item
+        android:id="@+id/menu_app_settings"
+        android:title="@string/menu_app_settings"/>
+    <item
+        android:id="@+id/menu_app_store"
+        android:title="@string/menu_app_store"/>
+    <item
+        android:id="@+id/menu_accounts"
+        android:title="@string/menu_accounts"/>
 
 </menu>
