--- a/res/layout/restrictionlist.xml
+++ b/res/layout/restrictionlist.xml
@@ -15,12 +15,21 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
+        <ImageView
+            android:id="@+id/imgInfo"
+            android:layout_width="32dip"
+            android:layout_height="32dip"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/help_application"
+            android:src="?attr/icon_info" />
+
         <TextView
             android:id="@+id/tvApp"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
+            android:paddingLeft="6dip"
             android:textIsSelectable="false" />
 
         <ImageView
