--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -2,6 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:id="@+id/menu_all"
+        android:title="@string/menu_all"/>
+    <item
         android:id="@+id/menu_settings"
         android:title="@string/menu_settings"/>
     <item
