Fixed geocoding name feedback

--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical" >
 
         <TableLayout
-            android:layout_width="300dip"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:stretchColumns="1" >
 
