--- a/res/layout/restrictionlist.xml
+++ b/res/layout/restrictionlist.xml
@@ -30,7 +30,8 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:paddingLeft="6dip"
-            android:textIsSelectable="false" />
+            android:textIsSelectable="false"
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/ivHelp"
