--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -47,22 +47,28 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
-        <ImageView
-            android:id="@+id/imgEdit"
+        <RelativeLayout
             android:layout_width="?android:attr/listPreferredItemHeightSmall"
-            android:layout_height="?android:attr/listPreferredItemHeightSmall"
+            android:layout_height="24dip"
             android:layout_gravity="center_vertical"
-            android:contentDescription="@string/help_application"
-            android:paddingLeft="6dip"
-            android:paddingRight="6dip"
-            android:src="?attr/icon_edit" />
+            android:paddingLeft="6dip" >
+
+            <ImageView
+                android:id="@+id/imgEdit"
+                android:layout_width="24dip"
+                android:layout_height="24dip"
+                android:layout_centerInParent="true"
+                android:contentDescription="@string/help_application"
+                android:src="?attr/icon_edit" />
+        </RelativeLayout>
 
         <ImageView
             android:id="@+id/imgUsed"
-            android:layout_width="36dip"
-            android:layout_height="36dip"
+            android:layout_width="32dip"
+            android:layout_height="32dip"
             android:layout_gravity="center_vertical"
             android:contentDescription="@string/help_used"
+            android:paddingLeft="2dip"
             android:src="?attr/icon_used_grayed" />
 
         <EditText
@@ -72,6 +78,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="6dip"
             android:layout_weight="1"
+            android:hint="@string/help_application"
             android:inputType="textNoSuggestions"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
