--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -17,6 +17,13 @@
         android:orientation="horizontal"
         android:paddingRight="@dimen/activity_horizontal_margin" >
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_category"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textIsSelectable="false" />
+
         <ImageView
             android:id="@+id/imgInfo"
             android:layout_width="32dip"
