--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -187,6 +187,16 @@
             <TableRow>
 
                 <CheckBox
+                    android:id="@+id/cbFSystem"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_span="2"
+                    android:text="@string/settings_fsystem" />
+            </TableRow>
+
+            <TableRow>
+
+                <CheckBox
                     android:id="@+id/cbExpert"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
