Menu to select allowed contacts - concept

--- a/res/menu/app.xml
+++ b/res/menu/app.xml
@@ -16,5 +16,8 @@
     <item
         android:id="@+id/menu_accounts"
         android:title="@string/menu_accounts"/>
+    <item
+        android:id="@+id/menu_contacts"
+        android:title="@string/menu_contacts"/>
 
 </menu>
