Add support link

--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -45,4 +45,11 @@
         android:text="@string/app_help"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:autoLink="web"
+        android:text="@string/app_support"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
 </LinearLayout>
