--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -39,7 +39,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:autoLink="web"
-        android:text="@string/app_info"
+        android:text="@string/app_help"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:autoLink="web"
+        android:text="@string/app_flattr"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </LinearLayout>
