--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -14,6 +14,7 @@
         <item name="icon_clear">@drawable/cross_holo_dark</item>
         <item name="icon_clear_grayed">@drawable/cross_grayed_out_holo_dark</item>
         <item name="color_system">@color/color_system_dark</item>
+        <item name="color_dangerous">@color/color_dangerous_dark</item>
     </style>
 
     <style name="CustomTheme.Light" parent="android:Theme.Holo.Light.DarkActionBar">
@@ -30,6 +31,7 @@
         <item name="icon_clear">@drawable/cross_holo_light</item>
         <item name="icon_clear_grayed">@drawable/cross_grayed_out_holo_light</item>
         <item name="color_system">@color/color_system_light</item>
+        <item name="color_dangerous">@color/color_dangerous_light</item>
     </style>
 
 </resources>
