Center category line items

--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -20,6 +20,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:text="@string/title_category"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textIsSelectable="false" />
@@ -36,6 +37,7 @@
             android:id="@+id/spRestriction"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:background="?attr/color_dangerous" />
 
