Do not apply dangerous restrictions to new applications

--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -38,8 +38,7 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:background="?attr/color_dangerous" />
+            android:layout_weight="1" />
 
         <ImageView
             android:id="@+id/ivHelp"
