--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -38,6 +38,15 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="6dip"
+        android:layout_marginTop="6dip"
+        android:autoLink="web"
+        android:text="@string/msg_first"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:autoLink="web"
         android:text="@string/app_help"
         android:textAppearance="?android:attr/textAppearanceSmall" />
