Display icon for frozen applications
(untested)

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -12,6 +12,7 @@
     <attr name="icon_launcher" format="reference" />
     <attr name="icon_clear" format="reference" />
     <attr name="icon_clear_grayed" format="reference" />
+    <attr name="icon_frozen" format="reference" />
     <attr name="color_dangerous" format="reference" />
 
 </resources>
