--- a/res/layout/mainentry.xml
+++ b/res/layout/mainentry.xml
@@ -33,13 +33,26 @@
             android:src="?attr/icon_granted" />
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imgInternet"
-        android:layout_width="24dip"
-        android:layout_height="24dip"
-        android:layout_gravity="center_vertical"
-        android:contentDescription="@string/help_internet"
-        android:src="?attr/icon_internet" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="vertical" >
+
+        <ImageView
+            android:id="@+id/imgInternet"
+            android:layout_width="24dip"
+            android:layout_height="24dip"
+            android:contentDescription="@string/help_internet"
+            android:src="?attr/icon_internet" />
+
+        <ImageView
+            android:id="@+id/imgFrozen"
+            android:layout_width="24dip"
+            android:layout_height="24dip"
+            android:contentDescription="@string/help_application"
+            android:src="?attr/icon_frozen" />
+    </LinearLayout>
 
     <CheckedTextView
         android:id="@+id/ctvName"
