--- a/res/layout/restrictionlist.xml
+++ b/res/layout/restrictionlist.xml
@@ -64,17 +64,31 @@
             android:orientation="horizontal" >
 
             <ImageView
-                android:id="@+id/imgAppEntryIcon"
+                android:id="@+id/imgIcon"
                 android:layout_width="?android:attr/listPreferredItemHeightSmall"
                 android:layout_height="?android:attr/listPreferredItemHeightSmall"
                 android:contentDescription="@string/help_application" />
 
-            <ImageView
-                android:id="@+id/imgAppEntryInternet"
-                android:layout_width="24dip"
-                android:layout_height="24dip"
-                android:contentDescription="@string/help_internet"
-                android:src="?attr/icon_internet" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="vertical" >
+
+                <ImageView
+                    android:id="@+id/imgInternet"
+                    android:layout_width="24dip"
+                    android:layout_height="24dip"
+                    android:contentDescription="@string/help_internet"
+                    android:src="?attr/icon_internet" />
+
+                <ImageView
+                    android:id="@+id/imgFrozen"
+                    android:layout_width="24dip"
+                    android:layout_height="24dip"
+                    android:contentDescription="@string/help_application"
+                    android:src="?attr/icon_frozen" />
+            </LinearLayout>
         </LinearLayout>
 
         <!-- Version / package name -->
