--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -13,6 +13,7 @@
         <item name="icon_launcher">@drawable/ic_launcher_holo_dark</item>
         <item name="icon_clear">@drawable/cross_holo_dark</item>
         <item name="icon_clear_grayed">@drawable/cross_grayed_out_holo_dark</item>
+        <item name="icon_frozen">@drawable/frozen_holo_dark</item>
         <item name="color_dangerous">@color/color_dangerous_dark</item>
     </style>
 
@@ -29,6 +30,7 @@
         <item name="icon_launcher">@drawable/ic_launcher_holo_light</item>
         <item name="icon_clear">@drawable/cross_holo_light</item>
         <item name="icon_clear_grayed">@drawable/cross_grayed_out_holo_light</item>
+        <item name="icon_frozen">@drawable/frozen_holo_light</item>
         <item name="color_dangerous">@color/color_dangerous_light</item>
     </style>
 
