--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -5,6 +5,7 @@
     <attr name="icon_help" format="reference" />
     <attr name="icon_info" format="reference" />
     <attr name="icon_internet" format="reference" />
+    <attr name="icon_internet_grayed" format="reference" />
     <attr name="icon_used_grayed" format="reference" />
     <attr name="icon_used" format="reference" />
     <attr name="icon_expander_minimized" format="reference" />
