--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -2,12 +2,15 @@
 
     <attr name="icon_edit" format="reference" />
     <attr name="icon_granted" format="reference" />
+    <attr name="icon_granted_grayed" format="reference" />
     <attr name="icon_help" format="reference" />
     <attr name="icon_info" format="reference" />
     <attr name="icon_internet" format="reference" />
     <attr name="icon_internet_grayed" format="reference" />
     <attr name="icon_used_grayed" format="reference" />
     <attr name="icon_used" format="reference" />
+    <attr name="icon_system" format="reference" />
+    <attr name="icon_system_grayed" format="reference" />
     <attr name="icon_expander_minimized" format="reference" />
     <attr name="icon_expander_maximized" format="reference" />
     <attr name="icon_launcher" format="reference" />
