--- a/res/menu/usage.xml
+++ b/res/menu/usage.xml
@@ -4,5 +4,8 @@
     <item
         android:id="@+id/menu_all"
         android:title="@string/menu_all"/>
+    <item
+        android:id="@+id/menu_refresh"
+        android:title="@string/menu_refresh"/>
 
 </menu>
