--- a/res/menu/app.xml
+++ b/res/menu/app.xml
@@ -5,6 +5,9 @@
         android:id="@+id/menu_all"
         android:title="@string/menu_all"/>
     <item
+        android:id="@+id/menu_usage"
+        android:title="@string/menu_usage"/>
+    <item
         android:id="@+id/menu_app_launch"
         android:title="@string/menu_app_launch"/>
     <item
