--- a/res/layout/usageentry.xml
+++ b/res/layout/usageentry.xml
@@ -16,12 +16,13 @@
         android:layout_width="16dip"
         android:layout_height="16dip"
         android:layout_gravity="center_vertical"
+        android:layout_marginRight="2dip"
         android:contentDescription="@string/help_used"
         android:src="@drawable/presence_busy" />
 
     <TextView
         android:id="@+id/tvApp"
-        android:layout_width="50dip"
+        android:layout_width="45dip"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textIsSelectable="false" />
