Fixed navigate from usage view crash

--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -228,7 +228,7 @@
 
         <Button
             android:id="@+id/btnOk"
-            android:layout_width="100dip"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@android:string/ok" />
