--- a/res/menu/app.xml
+++ b/res/menu/app.xml
@@ -8,6 +8,9 @@
         android:id="@+id/menu_usage"
         android:title="@string/menu_usage"/>
     <item
+        android:id="@+id/menu_submit"
+        android:title="@string/menu_submit"/>
+    <item
         android:id="@+id/menu_app_launch"
         android:title="@string/menu_app_launch"/>
     <item
