Remove submit menu for now

--- a/res/menu/app.xml
+++ b/res/menu/app.xml
@@ -9,7 +9,8 @@
         android:title="@string/menu_usage"/>
     <item
         android:id="@+id/menu_submit"
-        android:title="@string/menu_submit"/>
+        android:title="@string/menu_submit"
+        android:visible="false"/>
     <item
         android:id="@+id/menu_app_launch"
         android:title="@string/menu_app_launch"/>
