--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dip"
         android:drawableLeft="?attr/icon_used"
         android:drawablePadding="6dip"
         android:gravity="center_vertical"
@@ -20,7 +20,7 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dip"
         android:drawableLeft="?attr/icon_granted"
         android:drawablePadding="6dip"
         android:gravity="center_vertical"
@@ -30,7 +30,7 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dip"
         android:drawableLeft="?attr/icon_internet"
         android:drawablePadding="6dip"
         android:gravity="center_vertical"
@@ -40,7 +40,7 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dip"
         android:drawableLeft="?attr/icon_frozen"
         android:drawablePadding="6dip"
         android:gravity="center_vertical"
@@ -55,13 +55,13 @@
         android:paddingTop="2dip" >
 
         <View
-            android:layout_width="?android:attr/listPreferredItemHeightSmall"
-            android:layout_height="?android:attr/listPreferredItemHeightSmall"
+            android:layout_width="48dip"
+            android:layout_height="48dip"
             android:background="?attr/color_dangerous" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="?android:attr/listPreferredItemHeightSmall"
+            android:layout_height="48dip"
             android:gravity="center_vertical"
             android:paddingLeft="6dip"
             android:text="@string/help_dangerous"
