--- a/res/menu/app.xml
+++ b/res/menu/app.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+	<item android:id="@+id/menu_help"
+          android:title="@string/menu_help"
+          android:icon="?attr/icon_help"
+          android:showAsAction="always" />
     <item
         android:id="@+id/menu_all"
         android:title="@string/menu_all"/>
